// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Tests Has the correct styles fcStyle is set to danger | dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #e4585a;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #e4585a;
  box-sizing: border-box;
  position: relative;
  color: #DDDDDD;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c5 {
  border-top: solid 1px #e4585a;
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles fcStyle is set to danger 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #dd2c2e;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #dd2c2e;
  box-sizing: border-box;
  position: relative;
  color: inherit;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c5 {
  border-top: solid 1px #dd2c2e;
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles fcStyle is set to info | dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #2f83cf;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #2f83cf;
  box-sizing: border-box;
  position: relative;
  color: #DDDDDD;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c5 {
  border-top: solid 1px #2f83cf;
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles fcStyle is set to info 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #2f83cf;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #2f83cf;
  box-sizing: border-box;
  position: relative;
  color: inherit;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c5 {
  border-top: solid 1px #2f83cf;
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles fcStyle is set to success | dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #00854D;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #00854D;
  box-sizing: border-box;
  position: relative;
  color: #DDDDDD;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c5 {
  border-top: solid 1px #00854D;
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles fcStyle is set to success 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #00854D;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #00854D;
  box-sizing: border-box;
  position: relative;
  color: inherit;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c5 {
  border-top: solid 1px #00854D;
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles fcStyle is set to warning | dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #eba300;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #eba300;
  box-sizing: border-box;
  position: relative;
  color: #DDDDDD;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c5 {
  border-top: solid 1px #eba300;
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles fcStyle is set to warning 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #eba300;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #eba300;
  box-sizing: border-box;
  position: relative;
  color: inherit;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c5 {
  border-top: solid 1px #eba300;
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles for the default option | dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #627d98;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #627d98;
  box-sizing: border-box;
  position: relative;
  color: #DDDDDD;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c5 {
  border-top: solid 1px #627d98;
  padding: 10px;
  box-sizing: border-box;
  color: #DDDDDD;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;

exports[`Dialog Tests Has the correct styles for the default option 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #bcbcbc;
  z-index: 98;
  width: 500px;
  position: fixed;
  margin: 0 auto;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
  -webkit-animation: popin 0.2s;
  animation: popin 0.2s;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

.c1 {
  padding: 10px;
  border-bottom: solid 1px #bcbcbc;
  box-sizing: border-box;
  position: relative;
  color: inherit;
}

.c4 {
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c5 {
  border-top: solid 1px #bcbcbc;
  padding: 10px;
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  right: 10px;
  top: 7px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div
  class="c0"
  id="1"
  role="dialog"
>
  <div
    class="c1"
  >
    Title
    <button
      aria-label="Close"
      class="c2"
      title="Close dialog"
    >
      <svg
        class="c3  times"
        clip-rule="evenodd"
        fill-rule="evenodd"
        role="img"
        stroke-linejoin="round"
        stroke-miterlimit="2"
        title="Close"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    Dialog
  </div>
  <div
    class="c5"
  >
    Footer
  </div>
</div>
`;
